include(FetchContent)
FetchContent_Declare(
  googletest 
  GIT_REPOSITORY https://github.com/google/googletest.git
#  GIT_TAG        release-1.10.0
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Now simply link against gtest or gtest_main as needed. Eg
add_executable(${CMAKE_PROJECT_NAME}_tst 
                main.cpp 
                arguments_tests.cpp)

target_link_libraries(${CMAKE_PROJECT_NAME}_tst 
                      ${CMAKE_PROJECT_NAME}
                      gtest_main)

add_test(NAME ${PROJECT_NAME}_test COMMAND ${CMAKE_PROJECT_NAME}_tst)

